--- a/image-factory/bundle-trusty-wordpressfr1/heat/srv_wdprss.yaml
+++ b/image-factory/bundle-trusty-wordpressfr1/heat/srv_wdprss.yaml
@@ -26,7 +26,7 @@ parameters:
   key_name:
     type: string
     description: SSH key
-    default: mickaelfr2
+    default: mickael
 
   network_id:
     type: string
@@ -81,7 +81,7 @@ resources:
             cd /home/cloud/
             echo  "$mysqlpwd$" >> /home/cloud/mysqlpwd
             git clone  https://github.com/mickaelremilien/CLOUDPATT.git
-            sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-wordpressfr2/ansible/boot2strapWORD.yml
+            sudo ansible-playbook /home/cloud/CLOUDPATT/image-factory/bundle-trusty-wordpressfr1/ansible/boot2strapWORD.yml
             sudo rm -Rf /home/cloud/CLOUDPATT
             sudo rm /home/cloud/mysqlpwd
           params:
