--- a/image-factory/bundle-trusty-vpn(site2site)/heat/bundle-trusty-vpn.heat.yml
+++ b/image-factory/bundle-trusty-vpn(site2site)/heat/bundle-trusty-vpn.heat.yml
@@ -102,7 +102,7 @@ resources:
     type: OS::Nova::KeyPair
     properties:
       save_private_key: true
-      name: my_key2
+      name: my_key3
 
   network:
     type: OS::Neutron::Net
@@ -195,7 +195,6 @@ resources:
       network_id: { get_resource: network2 }
       fixed_ips:
         - ip_address: { "Fn::Replace": [ {'.0/24': '.100'}, {get_param: client_cidr} ] }
-
 
 
   server:
@@ -323,13 +322,22 @@ resources:
             $server_cidr$: {get_param: server_cidr}
             $client_cidr$: {get_param: client_cidr}
 
-  my_key3:
-    type: OS::Nova::KeyPair
-    properties:
-      save_private_key: false
-      name: my_key3
+  # my_key3:
+  #   type: OS::Nova::KeyPair
+  #   properties:
+  #     save_private_key: false
+  #     name: my_key3
+
 
 outputs:
+
+  private_key:
+      description: Private key
+      value: { get_attr: [ my_key3, private_key ] }
+
+  public_key:
+      description: Public key
+      value: { get_attr: [ my_key3, public_key ] }
 
   server_private_ip:
     description: IP address of server on private network
@@ -347,30 +355,30 @@ outputs:
     description: IP address of the deployed compute client
     value: { get_attr: [floating_ip2, floating_ip_address] }
 
-  server_id:
-    description: ID of the server
-    value: {get_resource: server}
-
-  client_id:
-    description: ID of the server
-    value: { get_resource: client }
-
-  security_group_id:
-    description: ID of the security group associate to the server
-    value: {get_resource: security_group}
-
-  subnet_server_id:
-    description: ID of the private subnet associate to the server
-    value: {get_resource: subnet}
-
-  subnet_client_id:
-    description: ID of the private subnet associate to the client
-    value: {get_resource: subnet2}
-
-  network_server_id:
-    description: ID of the private network associate to the server
-    value: {get_resource: network}
-
-  network_client_id:
-    description: ID of the private network associate to the client
-    value: {get_resource: network2}
+  # server_id:
+  #   description: ID of the server
+  #   value: {get_resource: server}
+  #
+  # client_id:
+  #   description: ID of the server
+  #   value: { get_resource: client }
+  #
+  # security_group_id:
+  #   description: ID of the security group associate to the server
+  #   value: {get_resource: security_group}
+  #
+  # subnet_server_id:
+  #   description: ID of the private subnet associate to the server
+  #   value: {get_resource: subnet}
+  #
+  # subnet_client_id:
+  #   description: ID of the private subnet associate to the client
+  #   value: {get_resource: subnet2}
+  #
+  # network_server_id:
+  #   description: ID of the private network associate to the server
+  #   value: {get_resource: network}
+  #
+  # network_client_id:
+  #   description: ID of the private network associate to the client
+  #   value: {get_resource: network2}
